revert: "fix: use custom scroll to fix page transition flickering"
This reverts commit 4d14301fe58cc207a5f66ccd795bcbe407950330.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,14 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body,
-#__next {
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
-
 a,
 button {
   -webkit-tap-highlight-color: transparent;
